# mindcore

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  MINDCORE.md  PYPI_CHECKLIST.md  README.md  TEST_STATUS.md  docker-compose.yml  examples.py  examples_adapters.py  examples_custom_importance.py  examples_custom_prompts.py  examples_ollama.py  mindcore_complete_architecture.md  mindcore_context_assembly.md  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql  setup.cfg  test_integration.py
config/: .env.example  README.md  agents.example.yaml  connectors.example.yaml  mindcore.example.yaml  vectorstores.example.yaml
dashboard/: README.md  index.html  package-lock.json  package.json  postcss.config.js  vite.config.js
dashboard/src/: App.vue  router.js
dashboard/src/api/: index.js
dashboard/src/assets/: styles.css
dashboard/src/stores/: dashboard.js
dashboard/src/views/: Configuration.vue  Logs.vue  Messages.vue  Models.vue  Overview.vue  Performance.vue  Sessions.vue  ThreadDetail.vue  Threads.vue
docker/: init.sql
docs/: COST_EFFICIENCY.md  IMPLEMENTATION_PLAN.md  PERFORMANCE_TUNING.md  PLAN_LLAMA_CPP_INTEGRATION.md  SECURITY.md  TEST_COVERAGE_PLAN.md  TEST_PRIORITY_PLAN.md  dashboard.md  quick-start.md
mindcore/: __init__.py  async_client.py  config.yaml  context_layer.py  importance.py  knowledge_store.py  llm_providers.py  prompts.py  py.typed
mindcore/adapters/: __init__.py
mindcore/agents/: __init__.py  base_agent.py  context_assembler_agent.py  deterministic_context_agent.py  enrichment_agent.py  retrieval_query_agent.py  smart_context_agent.py  summarization_agent.py  trivial_detector.py
mindcore/api/: __init__.py  server.py
mindcore/api/routes/: __init__.py  context.py  dashboard.py  ingest.py
mindcore/cli/: __init__.py  main.py  models.py
mindcore/connectors/: __init__.py  base.py  billing.py  orders.py  registry.py
mindcore/context_lake/: __init__.py  api_listener.py  knowledge_base.py  lake.py
mindcore/core/: __init__.py  access_control.py  adaptive_preferences.py  async_db.py  cache_invalidation.py  cache_manager.py  config_loader.py  db_manager.py  disk_cache_manager.py  metrics_manager.py  multi_agent.py  preferences_manager.py  prometheus_metrics.py  retention_policy.py  schemas.py  sqlite_manager.py  vocabulary.py  worker_monitor.py
mindcore/integrations/: __init__.py  base_adapter.py  langchain_adapter.py  llamaindex_adapter.py
mindcore/llm/: __init__.py  base_provider.py  llama_cpp_provider.py  openai_provider.py  provider_factory.py
mindcore/observability/: __init__.py  alerts.py  metrics.py  observer.py  quality.py
mindcore/tests/: __init__.py  conftest.py  test_async_client.py  test_confidence_scores.py  test_context.py  test_context_lake.py  test_db.py  test_deterministic_context.py  test_enrichment.py  test_importance.py  test_llm_providers.py  test_mindcore_client.py  test_observability.py  test_prompts.py  test_workers.py
mindcore/tests/test_agents/: test_enrichment_agent.py  test_smart_context_agent.py  test_trivial_detector.py
mindcore/tests/test_core/: test_access_control.py  test_async_db.py  test_cache_manager.py  test_context_layer.py  test_schemas.py  test_sqlite_manager.py  test_vocabulary.py
mindcore/tests/test_llm/: test_llama_provider.py  test_openai_provider.py
mindcore/tests/test_vectorstores/: test_base.py  test_embeddings.py
mindcore/utils/: __init__.py  cost_analysis.py  helper.py  logger.py  metrics.py  security.py  timezone.py  tokenizer.py
mindcore/v2/: __init__.py  mindcore.py
mindcore/v2/access/: __init__.py  permissions.py
mindcore/v2/clst/: __init__.py  storage.py
mindcore/v2/cross_agent/: __init__.py  layer.py  registry.py  routing.py  sharing.py
mindcore/v2/extraction/: __init__.py  extractor.py
mindcore/v2/flr/: __init__.py  recall.py
mindcore/v2/server/: __init__.py  mcp.py  rest.py
mindcore/v2/storage/: __init__.py  base.py  postgres.py  sqlite.py
mindcore/v2/tests/: __init__.py  test_cross_agent.py  test_mindcore_v2.py
mindcore/v2/vocabulary/: __init__.py  schema.py
mindcore/vectorstores/: __init__.py  base.py  chroma.py  embeddings.py  pgvector.py  pinecone.py
mindcore/workers/: __init__.py  celery_app.py  enrichment_worker.py  worker_manager.py
