[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindcore"
version = "0.1.0"
description = "Intelligent memory and context management for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mindcore Contributors"}
]
keywords = [
    "ai",
    "agents",
    "memory",
    "context",
    "llm",
    "openai",
    "langchain",
    "chatbot",
    "conversation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",  # For Ollama provider
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.18.0",  # For Anthropic Claude provider
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
all = [
    "anthropic>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/M-Alfaris/mindcore"
Documentation = "https://github.com/M-Alfaris/mindcore#readme"
Repository = "https://github.com/M-Alfaris/mindcore"
Issues = "https://github.com/M-Alfaris/mindcore/issues"

[project.scripts]
mindcore-server = "mindcore.api.server:run_server"

[tool.setuptools]
packages = ["mindcore", "mindcore.core", "mindcore.agents", "mindcore.integrations", "mindcore.api", "mindcore.api.routes", "mindcore.utils"]

[tool.setuptools.package-data]
mindcore = ["config.yaml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["mindcore/tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=mindcore --cov-report=term-missing"
