[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindcore"
version = "0.2.0"
description = "Intelligent memory and context management for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mindcore Contributors"}
]
keywords = [
    "ai",
    "agents",
    "memory",
    "context",
    "llm",
    "openai",
    "llama-cpp",
    "llama",
    "gguf",
    "langchain",
    "chatbot",
    "conversation",
    "local-llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LLM Providers
    "openai>=1.0.0",
    # Database
    "psycopg2-binary>=2.9.0",
    # API Framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    # Configuration & Validation
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # CLI
    "click>=8.0.0",
    "huggingface-hub>=0.20.0",
    # Caching & Rate Limiting (battle-tested)
    "cachetools>=5.0.0",
    "limits>=3.0.0",
    # Logging
    "structlog>=24.0.0",
]

[project.optional-dependencies]
llama = [
    "llama-cpp-python>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
all = [
    "mindcore[llama]",
]

[project.urls]
Homepage = "https://github.com/yourusername/mindcore"
Documentation = "https://github.com/yourusername/mindcore#readme"
Repository = "https://github.com/yourusername/mindcore"
Issues = "https://github.com/yourusername/mindcore/issues"

[project.scripts]
mindcore = "mindcore.cli:main"
mindcore-server = "mindcore.api.server:run_server"

[tool.setuptools]
packages = ["mindcore", "mindcore.core", "mindcore.agents", "mindcore.api", "mindcore.api.routes", "mindcore.utils", "mindcore.llm", "mindcore.cli"]

[tool.setuptools.package-data]
mindcore = ["config.yaml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["mindcore/tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=mindcore --cov-report=term-missing"
