[metadata]
name = mindcore
version = 0.1.0
description = Intelligent memory and context management for AI agents
long_description = file: README.md
long_description_content_type = text/markdown
author = Mindcore Contributors
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires =
    openai>=1.0.0
    psycopg2-binary>=2.9.0
    fastapi>=0.100.0
    uvicorn[standard]>=0.23.0
    pyyaml>=6.0
    pydantic>=2.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    isort>=5.12.0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,.eggs
ignore = E203,W503,E501

[coverage:run]
source = mindcore
omit =
    */tests/*
    */test_*.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
